[gd_scene load_steps=21 format=2]

[ext_resource path="res://Assets/roguelike-pack/Spritesheet/roguelikeSheet_transparent.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Dungeon.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scripts/SetupGame.gd" type="Script" id=3]
[ext_resource path="res://Models/Player.tscn" type="PackedScene" id=4]
[ext_resource path="res://Interfaces/UserInterface.tscn" type="PackedScene" id=5]
[ext_resource path="res://Interfaces/DialogBar.tscn" type="PackedScene" id=6]
[ext_resource path="res://Models/Structures/Gates/TopDungeonGate.tscn" type="PackedScene" id=7]
[ext_resource path="res://Models/Structures/Gates/LeftDungeonGate.tscn" type="PackedScene" id=8]
[ext_resource path="res://Models/Structures/Gates/RightDungeonGate.tscn" type="PackedScene" id=9]
[ext_resource path="res://Models/Structures/Gates/BottomDungeonGate.tscn" type="PackedScene" id=10]
[ext_resource path="res://Scripts/DungeonRoom/GatesSetup.gd" type="Script" id=11]
[ext_resource path="res://Models/Enemies/Slime.tscn" type="PackedScene" id=12]
[ext_resource path="res://Models/Itens/Coin.tscn" type="PackedScene" id=13]
[ext_resource path="res://Models/Itens/Heart.tscn" type="PackedScene" id=16]
[ext_resource path="res://Assets/roguelike-cave-pack/Spritesheet/roguelikeDungeon_transparent.png" type="Texture" id=17]

[sub_resource type="TileSet" id=1]
0/name = "roguelikeSheet_transparent.png 0"
0/texture = ExtResource( 1 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 136, 170, 16, 16 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "roguelikeSheet_transparent.png 1"
1/texture = ExtResource( 1 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 51, 323, 16, 16 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0

[sub_resource type="ConvexPolygonShape2D" id=6]
points = PoolVector2Array( 1.47882, 8.43503, 15.3683, 8.43503, 15.3683, 15.5413, 1.15582, 15.3798 )

[sub_resource type="ConvexPolygonShape2D" id=7]
points = PoolVector2Array( 6.55438, 16, 6.32178, 10.2406, 9.8103, 10.4732, 9.8103, 16 )

[sub_resource type="ConvexPolygonShape2D" id=4]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="TileSet" id=5]
0/name = "Grave_Top"
0/texture = ExtResource( 1 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 850, 187, 16, 16 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 6 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 6 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0
1/name = "roguelikeSheet_transparent.png 1"
1/texture = ExtResource( 1 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 884, 170, 16, 16 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape = SubResource( 7 )
1/shape_one_way = false
1/shape_one_way_margin = 1.0
1/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 7 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
1/z_index = 0
2/name = "roguelikeSheet_transparent.png 2"
2/texture = ExtResource( 1 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 867, 187, 16, 16 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape = SubResource( 4 )
2/shape_one_way = false
2/shape_one_way_margin = 1.0
2/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 4 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
2/z_index = 0
3/name = "roguelikeSheet_transparent.png 3"
3/texture = ExtResource( 1 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 884, 187, 16, 16 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape_one_way = false
3/shape_one_way_margin = 0.0
3/shapes = [  ]
3/z_index = 0
4/name = "roguelikeSheet_transparent.png 4"
4/texture = ExtResource( 1 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 901, 187, 16, 16 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shape_offset = Vector2( 0, 0 )
4/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
4/shape_one_way = false
4/shape_one_way_margin = 0.0
4/shapes = [  ]
4/z_index = 0
5/name = "roguelikeSheet_transparent.png 5"
5/texture = ExtResource( 1 )
5/tex_offset = Vector2( 0, 0 )
5/modulate = Color( 1, 1, 1, 1 )
5/region = Rect2( 901, 170, 16, 16 )
5/tile_mode = 0
5/occluder_offset = Vector2( 0, 0 )
5/navigation_offset = Vector2( 0, 0 )
5/shape_offset = Vector2( 0, 0 )
5/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
5/shape_one_way = false
5/shape_one_way_margin = 0.0
5/shapes = [  ]
5/z_index = 0
6/name = "roguelikeSheet_transparent.png 6"
6/texture = ExtResource( 1 )
6/tex_offset = Vector2( 0, 0 )
6/modulate = Color( 1, 1, 1, 1 )
6/region = Rect2( 867, 170, 16, 16 )
6/tile_mode = 0
6/occluder_offset = Vector2( 0, 0 )
6/navigation_offset = Vector2( 0, 0 )
6/shape_offset = Vector2( 0, 0 )
6/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
6/shape_one_way = false
6/shape_one_way_margin = 0.0
6/shapes = [  ]
6/z_index = 0
7/name = "roguelikeSheet_transparent.png 7"
7/texture = ExtResource( 1 )
7/tex_offset = Vector2( 0, 0 )
7/modulate = Color( 1, 1, 1, 1 )
7/region = Rect2( 527, 153, 16, 16 )
7/tile_mode = 0
7/occluder_offset = Vector2( 0, 0 )
7/navigation_offset = Vector2( 0, 0 )
7/shape_offset = Vector2( 0, 0 )
7/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
7/shape_one_way = false
7/shape_one_way_margin = 0.0
7/shapes = [  ]
7/z_index = 0
8/name = "roguelikeSheet_transparent.png 8"
8/texture = ExtResource( 1 )
8/tex_offset = Vector2( 0, 0 )
8/modulate = Color( 1, 1, 1, 1 )
8/region = Rect2( 510, 153, 16, 16 )
8/tile_mode = 0
8/occluder_offset = Vector2( 0, 0 )
8/navigation_offset = Vector2( 0, 0 )
8/shape_offset = Vector2( 0, 0 )
8/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
8/shape_one_way = false
8/shape_one_way_margin = 0.0
8/shapes = [  ]
8/z_index = 0
9/name = "roguelikeSheet_transparent.png 9"
9/texture = ExtResource( 1 )
9/tex_offset = Vector2( 0, 0 )
9/modulate = Color( 1, 1, 1, 1 )
9/region = Rect2( 493, 153, 16, 16 )
9/tile_mode = 0
9/occluder_offset = Vector2( 0, 0 )
9/navigation_offset = Vector2( 0, 0 )
9/shape_offset = Vector2( 0, 0 )
9/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
9/shape_one_way = false
9/shape_one_way_margin = 0.0
9/shapes = [  ]
9/z_index = 0
10/name = "roguelikeSheet_transparent.png 10"
10/texture = ExtResource( 1 )
10/tex_offset = Vector2( 0, 0 )
10/modulate = Color( 1, 1, 1, 1 )
10/region = Rect2( 476, 153, 16, 16 )
10/tile_mode = 0
10/occluder_offset = Vector2( 0, 0 )
10/navigation_offset = Vector2( 0, 0 )
10/shape_offset = Vector2( 0, 0 )
10/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
10/shape_one_way = false
10/shape_one_way_margin = 0.0
10/shapes = [  ]
10/z_index = 0
11/name = "Grave_Bottom"
11/texture = ExtResource( 1 )
11/tex_offset = Vector2( 0, 0 )
11/modulate = Color( 1, 1, 1, 1 )
11/region = Rect2( 850, 187, 16, 16 )
11/tile_mode = 0
11/occluder_offset = Vector2( 0, 0 )
11/navigation_offset = Vector2( 0, 0 )
11/shape_offset = Vector2( 0, 0 )
11/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
11/shape_one_way = false
11/shape_one_way_margin = 0.0
11/shapes = [  ]
11/z_index = 0
12/name = "Top"
12/texture = ExtResource( 1 )
12/tex_offset = Vector2( 0, 0 )
12/modulate = Color( 1, 1, 1, 1 )
12/region = Rect2( 850, 170, 16, 16 )
12/tile_mode = 0
12/occluder_offset = Vector2( 0, 0 )
12/navigation_offset = Vector2( 0, 0 )
12/shape_offset = Vector2( 0, 0 )
12/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
12/shape_one_way = false
12/shape_one_way_margin = 0.0
12/shapes = [  ]
12/z_index = 0
13/name = "Decoration"
13/texture = ExtResource( 17 )
13/tex_offset = Vector2( 0, 0 )
13/modulate = Color( 1, 1, 1, 1 )
13/region = Rect2( 0, 0, 135, 84 )
13/tile_mode = 2
13/autotile/icon_coordinate = Vector2( 0, 0 )
13/autotile/tile_size = Vector2( 16, 16 )
13/autotile/spacing = 1
13/autotile/occluder_map = [  ]
13/autotile/navpoly_map = [  ]
13/autotile/priority_map = [  ]
13/autotile/z_index_map = [  ]
13/occluder_offset = Vector2( 0, 0 )
13/navigation_offset = Vector2( 0, 0 )
13/shape_offset = Vector2( 0, 0 )
13/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
13/shape_one_way = false
13/shape_one_way_margin = 0.0
13/shapes = [  ]
13/z_index = 0
14/name = "Decoration2"
14/texture = ExtResource( 17 )
14/tex_offset = Vector2( 0, 0 )
14/modulate = Color( 1, 1, 1, 1 )
14/region = Rect2( 170, 170, 101, 135 )
14/tile_mode = 2
14/autotile/icon_coordinate = Vector2( 0, 0 )
14/autotile/tile_size = Vector2( 16, 16 )
14/autotile/spacing = 1
14/autotile/occluder_map = [  ]
14/autotile/navpoly_map = [  ]
14/autotile/priority_map = [  ]
14/autotile/z_index_map = [  ]
14/occluder_offset = Vector2( 0, 0 )
14/navigation_offset = Vector2( 0, 0 )
14/shape_offset = Vector2( 0, 0 )
14/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
14/shape_one_way = false
14/shape_one_way_margin = 0.0
14/shapes = [  ]
14/z_index = 0

[node name="DungeonRoom0" type="Node2D"]
position = Vector2( 0, 25 )
script = ExtResource( 3 )

[node name="Dungeon" parent="." instance=ExtResource( 2 )]

[node name="Terrain" type="Node2D" parent="."]

[node name="FirstLayer" type="TileMap" parent="Terrain"]
scale = Vector2( 4, 4 )
tile_set = SubResource( 1 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 65537, 1, 0, 65538, 0, 0, 65539, 1, 0, 65540, 0, 0, 65541, 1, 0, 65542, 1, 0, 65543, 1, 0, 65544, 1, 0, 65545, 0, 0, 65546, 1, 0, 65547, 0, 0, 65548, 0, 0, 65549, 0, 0, 65550, 1, 0, 131073, 1, 0, 131074, 0, 0, 131075, 1, 0, 131076, 0, 0, 131077, 1, 0, 131078, 1, 0, 131079, 1, 0, 131080, 1, 0, 131081, 1, 0, 131082, 0, 0, 131083, 1, 0, 131084, 0, 0, 131085, 1, 0, 131086, 0, 0, 196609, 0, 0, 196610, 1, 0, 196611, 0, 0, 196612, 1, 0, 196613, 0, 0, 196614, 1, 0, 196615, 1, 0, 196616, 0, 0, 196617, 1, 0, 196618, 1, 0, 196619, 0, 0, 196620, 1, 0, 196621, 0, 0, 196622, 0, 0, 262145, 1, 0, 262146, 1, 0, 262147, 1, 0, 262148, 0, 0, 262149, 1, 0, 262150, 1, 0, 262151, 1, 0, 262152, 1, 0, 262153, 1, 0, 262154, 0, 0, 262155, 1, 0, 262156, 1, 0, 262157, 1, 0, 262158, 1, 0, 327681, 1, 0, 327682, 1, 0, 327683, 0, 0, 327684, 0, 0, 327685, 0, 0, 327686, 1, 0, 327687, 0, 0, 327688, 0, 0, 327689, 1, 0, 327690, 1, 0, 327691, 0, 0, 327692, 1, 0, 327693, 1, 0, 327694, 1, 0, 393217, 0, 0, 393218, 1, 0, 393219, 0, 0, 393220, 1, 0, 393221, 0, 0, 393222, 0, 0, 393223, 1, 0, 393224, 1, 0, 393225, 0, 0, 393226, 1, 0, 393227, 1, 0, 393228, 1, 0, 393229, 0, 0, 393230, 1, 0, 458753, 1, 0, 458754, 1, 0, 458755, 1, 0, 458756, 1, 0, 458757, 0, 0, 458758, 1, 0, 458759, 1, 0, 458760, 1, 0, 458761, 1, 0, 458762, 0, 0, 458763, 0, 0, 458764, 1, 0, 458765, 1, 0, 458766, 0, 0, 524289, 0, 0, 524290, 1, 0, 524291, 1, 0, 524292, 0, 0, 524293, 1, 0, 524294, 1, 0, 524295, 1, 0, 524296, 1, 0, 524297, 1, 0, 524298, 1, 0, 524299, 1, 0, 524300, 0, 0, 524301, 0, 0, 524302, 1, 0, 589831, 1, 0, 589832, 1, 0 )

[node name="Decoration" type="TileMap" parent="Terrain"]
scale = Vector2( 4, 4 )
tile_set = SubResource( 5 )
cell_size = Vector2( 16, 16 )
show_collision = true
format = 1
tile_data = PoolIntArray( 65537, 13, 131075, 65541, 14, 327683, 65546, 14, 262148, 65548, 14, 327683, 65550, 13, 131074, 131075, 13, 196609, 131077, 13, 196609, 131078, 12, 0, 131080, 14, 327683, 131081, 12, 0, 131085, 7, 0, 196609, 14, 262148, 196610, 1, 0, 196614, 0, 0, 196616, 13, 131077, 196617, 0, 0, 196620, 1, 0, 196622, 13, 196610, 262145, 13, 131077, 262146, 12, 0, 262150, 12, 0, 262152, 7, 0, 262153, 12, 0, 262156, 12, 0, 327682, 0, 0, 327684, 14, 327683, 327686, 0, 0, 327689, 0, 0, 327690, 14, 393220, 327692, 0, 0, 393218, 12, 0, 393219, 13, 131076, 393220, 7, 0, 393223, 10, 0, 393225, 13, 131075, 393228, 12, 0, 393230, 13, 131074, 458754, 0, 0, 458755, 13, 131076, 458762, 13, 131076, 458763, 13, 196610, 458764, 0, 0, 458765, 10, 0, 524289, 14, 393220, 524290, 14, 327683, 524292, 13, 131076, 524293, 7, 0, 524298, 10, 0, 524300, 13, 131075 )

[node name="Gates" type="Node2D" parent="."]
script = ExtResource( 11 )

[node name="TopDungeonGate" parent="Gates" instance=ExtResource( 7 )]
position = Vector2( 512, 20 )
scale = Vector2( 4, 4 )

[node name="LeftDungeonGate" parent="Gates" instance=ExtResource( 8 )]
position = Vector2( 20, 319 )
scale = Vector2( 4, 4 )

[node name="RightDungeonGate" parent="Gates" instance=ExtResource( 9 )]
position = Vector2( 1005, 320 )
scale = Vector2( 4, 4 )

[node name="BottomDungeonGate" parent="Gates" instance=ExtResource( 10 )]
position = Vector2( 512, 620 )
scale = Vector2( 4, 4 )

[node name="Instances" type="Node2D" parent="."]

[node name="Heart" parent="Instances" instance=ExtResource( 16 )]
position = Vector2( 161, 539 )

[node name="Coin" parent="Instances" instance=ExtResource( 13 )]
position = Vector2( 96, 159 )

[node name="Coin2" parent="Instances" instance=ExtResource( 13 )]
position = Vector2( 865, 98 )

[node name="Coin3" parent="Instances" instance=ExtResource( 13 )]
position = Vector2( 864, 474 )

[node name="Enemies" type="Node2D" parent="."]

[node name="Slime" parent="Enemies" instance=ExtResource( 12 )]
position = Vector2( 892, 510 )

[node name="Slime2" parent="Enemies" instance=ExtResource( 12 )]
position = Vector2( 181, 128 )

[node name="Slime3" parent="Enemies" instance=ExtResource( 12 )]
position = Vector2( 709, 90 )

[node name="Interfaces" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="DialogBar" parent="Interfaces" instance=ExtResource( 6 )]
unique_name_in_owner = true
visible = false
margin_left = 1.0
margin_top = 42.0
margin_right = 1.0
margin_bottom = 42.0

[node name="UserInterface" parent="Interfaces" instance=ExtResource( 5 )]
unique_name_in_owner = true
margin_top = -4.0
margin_bottom = -4.0

[node name="Player" type="Node2D" parent="."]

[node name="Player" parent="Player" instance=ExtResource( 4 )]
unique_name_in_owner = true
position = Vector2( 519, 488 )
scale = Vector2( 2, 2 )

[connection signal="tree_exiting" from="." to="." method="_on_scene_tree_exiting"]
