[gd_scene load_steps=11 format=2]

[ext_resource path="res://Tiles/Wall.tres" type="TileSet" id=1]
[ext_resource path="res://Models/Enemies/Skeleton.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Dungeon.tscn" type="PackedScene" id=3]
[ext_resource path="res://Models/Structures/Gates/RightDungeonGate.tscn" type="PackedScene" id=4]
[ext_resource path="res://Models/Structures/Gates/BottomDungeonGate.tscn" type="PackedScene" id=5]
[ext_resource path="res://Models/Player.tscn" type="PackedScene" id=6]
[ext_resource path="res://Interfaces/DialogBar.tscn" type="PackedScene" id=7]
[ext_resource path="res://Interfaces/UserInterface.tscn" type="PackedScene" id=8]
[ext_resource path="res://Scripts/DungeonRoom/GatesSetup.gd" type="Script" id=9]
[ext_resource path="res://Scripts/SetupGame.gd" type="Script" id=10]

[node name="DungeonRoom4" type="Node2D"]
position = Vector2( 0, 25 )
script = ExtResource( 10 )

[node name="Dungeon" parent="." instance=ExtResource( 3 )]

[node name="Terrain" type="Node2D" parent="."]

[node name="SecondLayer" type="TileMap" parent="Terrain"]
scale = Vector2( 4, 4 )
tile_set = ExtResource( 1 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 131075, 2, 0, 131076, 2, 1, 131083, 2, 0, 131084, 2, 196609, 196611, 2, 65536, 196612, 2, 65537, 196619, 2, 262144, 196620, 2, 262145, 262147, 2, 131072, 262148, 2, 131073, 262155, 2, 327680, 262156, 2, 327681, 393219, 2, 0, 393220, 2, 1, 393227, 2, 0, 393228, 2, 1, 458755, 2, 262144, 458756, 2, 262145, 458763, 2, 65536, 458764, 2, 65537, 524291, 2, 327680, 524292, 2, 327681, 524299, 2, 131072, 524300, 2, 131073 )

[node name="Gates" type="Node2D" parent="."]
script = ExtResource( 9 )

[node name="RightDungeonGate" parent="Gates" instance=ExtResource( 4 )]
position = Vector2( 1004, 320 )
scale = Vector2( 4, 4 )

[node name="BottomDungeonGate" parent="Gates" instance=ExtResource( 5 )]
position = Vector2( 512, 620 )
scale = Vector2( 4, 4 )

[node name="Enemies" type="Node2D" parent="."]

[node name="Skeleton" parent="Enemies" instance=ExtResource( 2 )]
position = Vector2( 88, 80 )

[node name="Skeleton2" parent="Enemies" instance=ExtResource( 2 )]
position = Vector2( 600, 144 )

[node name="Skeleton3" parent="Enemies" instance=ExtResource( 2 )]
visible = false
position = Vector2( 560, 424 )

[node name="Skeleton4" parent="Enemies" instance=ExtResource( 2 )]
position = Vector2( 128, 296 )

[node name="Instances" type="Node2D" parent="."]

[node name="Interfaces" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="DialogBar" parent="Interfaces" instance=ExtResource( 7 )]
unique_name_in_owner = true
visible = false

[node name="UserInterface" parent="Interfaces" instance=ExtResource( 8 )]
unique_name_in_owner = true

[node name="PlayerNode" type="Node2D" parent="."]

[node name="Player" parent="PlayerNode" instance=ExtResource( 6 )]
unique_name_in_owner = true
position = Vector2( 517, 505 )
scale = Vector2( 2, 2 )

[connection signal="tree_exiting" from="." to="." method="_on_scene_tree_exiting"]
